tests/snapshots/snapshots__cases@beta.tl.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/beta.tl
---
def x : Nat := zero
def y : Nat := succ zero
zero
succ zero
