tests/snapshots/snapshots__cases@polymorphic_id.tl.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/polymorphic_id.tl
---
def id : (A : Type) -> A -> A := fun (A : Type) => fun (x : A) => x
fun (A : Type) => fun (x : A) => x : (A : Type) -> A -> A
zero : Nat
succ zero
