tests/snapshots/snapshots__cases@tac_intro_assumption.tl.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/tac_intro_assumption.tl
---
theorem id : (A : Type) -> A -> A := fun (A : Type) => fun (x : A) => x
theorem const : (A : Type) -> (B : Type) -> A -> B -> A := fun (A : Type) => fun (B : Type) => fun (a : A) => fun (b : B) => a
id : (A : Type) -> A -> A := fun (A : Type) => fun (x : A) => x
const : (A : Type) -> (B : Type) -> A -> B -> A := fun (A : Type) => fun (B : Type) => fun (a : A) => fun (b : B) => a
