tests/snapshots/snapshots__cases@universes.tl.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/universes.tl
---
Prop : Type
Type : Type 1
Type 1 : Type 2
Type 2 : Type 3
axiom P : Prop
axiom T : Type
P : Prop
T : Type
