tests/snapshots/snapshots__examples@basics.tl.snap
---
source: tests/snapshots.rs
expression: run(path)
input_file: examples/input/basics.tl
---
def two : Nat := succ (succ zero)
def three : Nat := succ (succ (succ zero))
def four : Nat := succ (succ (succ (succ zero)))
succ (succ zero) : Nat
succ (succ (succ zero)) : Nat
succ (succ (succ zero))
succ (succ (succ (succ zero)))
